<resources>
    <string name="app_name">NFCMeeting</string>
    <string name="navigation_drawer_open" translatable="false">navigation_drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">navigation_drawer_close</string>

    <string name="success_copied">Copied</string>

    <string name="just_now">just now</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>

    <string name="no_cache_and_network">Network and cache is unavailable.</string>
    <string name="page_no_found">Page not found.</string>
    <string name="unauthorized">Unauthorized.</string>

    <string name="no_network_tip">Loading data from NFCMeeting failed. Please check your network connection and retry.
    </string>
    <string name="load_timeout_tip">Loading data from NFCMeeting timed out. Please check your network connection and
        retry.
    </string>
    <string name="loading">loading</string>
    <string name="invalid_url">Invalid url!</string>

    <string name="password_warning">Invalid password!</string>
    <string name="user_name_warning">Invalid username!</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_in_browser">LOGIN WITH BROWSER</string>
    <string name="oauth_tip">Login using your default browser(OAuth)</string>


    <string name="logout">Logout</string>

    <!--menu-->
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="my_meetings">All meetings</string>
    <string name="starred_meetings">Starred meetings</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>

    <string name="my_repos">My repos</string>
    <string name="starred_repos">Starred repos</string>

    <string name="sort">Sort</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="type">Type</string>
    <string name="unstart">Unstart</string>
    <string name="finished">Finished</string>
    <string name="going">Going</string>

    <string name="sort_order">Sort order</string>
    <string name="full_name_asc">Full name asc</string>
    <string name="full_name_desc">Full name desc</string>
    <string name="recently_created">Recently created</string>
    <string name="previously_created">Previously created</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>

    <string name="tap_to_retry">Tap to retry</string>

    <string name="double_click_toolbar_tip">You can double click title to back top in list page.</string>


    <string name="best_match">Best match</string>
    <string name="most_recently_joined">Most recently joined</string>
    <string name="least_recently_joined">Least recently joined</string>
    <string name="info">Info</string>
    <string name="no_repository">No meetings</string>
    <string name="title_activity_repository">RepositoryActivity</string>
    <string name="fork_tag">Fork</string>
    <string name="warning_dialog_tile">Warning</string>
    <string name="logout_warning">Confirm to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="participants">Participants</string>
    <string name="on_time">On time</string>
    <string name="late">Late</string>
    <string name="absent">Absent</string>
    <string name="content">Content</string>


</resources>
