<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_type_chooser"
        android:title="@string/type">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_unstart"
                    android:title="@string/unstart"
                    android:checked="true"/>
                <item
                    android:id="@+id/nav_going"
                    android:title="@string/going"/>
                <item
                    android:id="@+id/nav_finished"
                    android:title="@string/finished"/>

            </group>
        </menu>
    </item>

    <!--created, updated, pushed, full_name.-->
    <item
        android:id="@+id/nav_sort"
        android:title="@string/sort_order">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_full_name_asc"
                    android:title="@string/full_name_asc"
                    android:checked="true"/>
                <item
                    android:id="@+id/nav_full_name_desc"
                    android:title="@string/full_name_desc"/>
                <item
                    android:id="@+id/nav_recently_created"
                    android:title="@string/recently_created"/>
                <item
                    android:id="@+id/nav_previously_created"
                    android:title="@string/previously_created"/>

            </group>
        </menu>
    </item>

</menu>