<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_title"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_title"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/action_bast_match"
                android:title="@string/best_match"/>
            <item
                android:id="@+id/action_recently_created"
                android:title="@string/recently_created"/>
            <item
                android:id="@+id/action_previously_created"
                android:title="@string/previously_created"/>



            <item
                android:id="@+id/action_most_recently_joined"
                android:title="@string/most_recently_joined"/>
            <item
                android:id="@+id/action_least_recently_joined"
                android:title="@string/least_recently_joined"/>

        </menu>
    </item>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_title"
        android:title="@string/info"
        app:showAsAction="always"/>
</menu>